# Regression-Discontinuity-and-the-Price-Effects-of-Stock-Market-Indexing-Replication

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENT_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  environment.yml  project.ipynb  project_BACKUP_pre_fuzzy.ipynb  pyproject.toml
.github/workflows/: run-notebook.yml
.virtual_documents/: project.ipynb
auxiliary/: __init__.py  data_processing.py  estimation.py  plotting.py
memory/: MEMORY.md
tests/: test_auxiliary.py  test_imports.py
