[project]
name = "russell-rd-replication"
version = "0.1.0"
description = "Replication of Chang, Hong, and Liskovich (2015) — Regression Discontinuity and the Price Effects of Stock Market Indexing"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
